apply plugin: 'com.android.library'

android {
	namespace "com.offsetnull.bt"
	compileSdk 35


	defaultConfig {
		minSdk 31
		targetSdk 35
		versionCode 219
		versionName "2.0"
	}

	compileOptions {
		sourceCompatibility JavaVersion.VERSION_17
		targetCompatibility JavaVersion.VERSION_17
	}

	buildFeatures {
		viewBinding true
	}

	lint {
		warningsAsErrors false
		abortOnError false
		xmlReport true
		htmlReport true
		baseline file("lint-baseline.xml")
	}

	sourceSets {
		main {
			manifest.srcFile 'AndroidManifest.xml'
			java.srcDirs = ['src']
			resources.srcDirs = ['src']
			res.srcDirs = ['res']
			assets.srcDirs = ['assets']
			jniLibs.srcDirs = ['libs']
		}
	}
}

dependencies {
	api "androidx.appcompat:appcompat:1.7.0"
	api "com.google.android.material:material:1.12.0"
	api "androidx.core:core:1.15.0"
}
